ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/keycloak/stateful_set_3.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations: {}
  labels:
    name: keycloak
  name: keycloak
  namespace: kubeprod
spec:
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      name: keycloak
  serviceName: keycloak
  template:
    metadata:
      annotations:
        prometheus.io/path: /auth/realms/master/metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        name: keycloak
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: keycloak
              topologyKey: kubernetes.io/hostname
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: keycloak
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: keycloak
              topologyKey: failure-domain.beta.kubernetes.io/region
            weight: 70
      containers:
      - args:
        - -b=0.0.0.0
        - -c=standalone.xml
        - -Dkeycloak.import=/realm/bkpr-realm.json
        command:
        - /opt/jboss/tools/docker-entrypoint.sh
        image: jboss/keycloak:8.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/
            port: http
          initialDelaySeconds: 300
          periodSeconds: 10
          successThreshold: 1
        name: keycloak
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /auth/realms/master
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/deployments
          name: deployments
        - mountPath: /realm/
          name: secret
          readOnly: true
      imagePullSecrets: []
      securityContext:
        fsGroup: 1001
      serviceAccountName: keycloak
      terminationGracePeriodSeconds: 60
      volumes:
      - emptyDir: {}
        name: deployments
      - configMap:
          defaultMode: 493
          name: keycloak-sh-1dedc24
        name: scripts
      - name: secret
        secret:
          secretName: keycloak-b2d6c6b
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates: []
