ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/keycloak/service_8.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: keycloak
  name: keycloak
  namespace: kubeprod
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    name: keycloak
  type: ClusterIP
