ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/keycloak/ingress_2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    name: keycloak
  name: keycloak
  namespace: kubeprod
spec:
  rules:
  - host: id.hosteaching.ovh
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - id.hosteaching.ovh
    secretName: keycloak-tls
